# jbf_grad_proj

./: README.md
matrices/: gen_mat.m  matrix.mat  matrix_0.mat
result/: draw_mat.m  perm_vec.mat  perm_vec_0.mat
src/: CMakeLists.txt  Stump.cpp  draw_mat.m  gen_mat.m  main.cpp  run_demo.sh  utils.h
src/include/: Stump.h
tested/1/: matrix.mat  matrix_0.mat  parametrer.txt  perm_vec.mat  perm_vec_0.mat
tested/2/: matrix.mat  matrix_0.mat  parameter.txt  perm_vec.mat  perm_vec_0.mat
tested/3/: matrix.mat  matrix_0.mat  parameter.txt  perm_vec.mat  perm_vec_0.mat
tested/4/: matrix.mat  matrix_0.mat  parameter.txt  perm_vec.mat  perm_vec_0.mat
tested/cathead_10/: README.md  matrix.mat  matrix_0.mat  runtime_100.txt  runtime_1000.txt  runtime_1500.txt  runtime_2000.txt  runtime_25.txt  runtime_250.txt  runtime_50.txt  runtime_500.txt  runtime_750.txt
tested/cathead_2/: matrix.mat  matrix_0.mat  runtime_100.txt  runtime_1000.txt  runtime_1500.txt  runtime_2000.txt  runtime_25.txt  runtime_250.txt  runtime_50.txt  runtime_500.txt  runtime_750.txt
tested/cathead_5/: matrix.mat  matrix_0.mat  runtime_100.txt  runtime_1000.txt  runtime_1500.txt  runtime_2000.txt  runtime_25.txt  runtime_250.txt  runtime_50.txt  runtime_500.txt  runtime_750.txt
tested/igea_2/: matrix.mat  matrix_0.mat  runtime_100.txt  runtime_1000.txt  runtime_1500.txt  runtime_2000.txt  runtime_25.txt  runtime_250.txt  runtime_50.txt  runtime_500.txt  runtime_750.txt
